# advent-of-code-2021

./: .gitignore  pyproject.toml
advent_of_code/: exercises.py  get_data.py
tests/: test_exercises.py
