[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["gunnhip <gunnhild.presthus@statnett.no>"]

[tool.poetry.dependencies]
python = "==3.9"
pytest = "^6.2.5"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
